--- a/estrela-america-v2/components.json
+++ b/estrela-america-v2/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.ts",
-    "css": "/src/app/assets/css",
+    "css": "src/app/assets/css/globals.css",
     "baseColor": "gray",
     "cssVariables": true,
     "prefix": ""
