--- a/estrela-america-v2/.eslintrc.json
+++ b/estrela-america-v2/.eslintrc.json
@@ -2,5 +2,12 @@
   "extends": [
     "@rocketseat/eslint-config/next",
     "next/core-web-vitals"
+  ],
+  "ignorePatterns": [
+    "build/",  
+    "dist/",  
+    "next/",
+    "src/components/ui/*.tsx",
+    "path/to/src/lib/*.ts"
   ]
 }
