--- a/estrela-america-v2/package.json
+++ b/estrela-america-v2/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.5",
     "embla-carousel-autoplay": "8.0.0-rc22",
     "embla-carousel-react": "8.0.0-rc22",
+    "framer-motion": "^11.0.25",
     "lucide-react": "^0.317.0",
     "next": "14.1.0",
     "react": "^18",
