--- a/estrela-america-v2/package.json
+++ b/estrela-america-v2/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tanstack/react-query": "^5.25.0",
     "@tanstack/react-table": "^8.15.3",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
