--- a/estrela-america-v2/package.json
+++ b/estrela-america-v2/package.json
@@ -36,9 +36,11 @@
     "lucide-react": "^0.317.0",
     "next": "14.1.0",
     "next-auth": "5.0.0-beta.16",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
     "zod": "^3.22.4"
   },
