feat: cart context

--- a/estrela-america-v2/.eslintrc.json
+++ b/estrela-america-v2/.eslintrc.json
@@ -9,6 +9,7 @@
     "next/",
     "src/components/ui/*.tsx",
     "src/lib/*.ts",
-    "src/api/**/**"
+    "src/api/**/**",
+    "src/context"
   ]
 }
